group1_proj2/codes/defination/y.output
Terminals unused in grammar

   LEFT_BRACET
   RIGTH_BRACET
   SUMMATION_OPERATOR
   SUBSTRACTION_OPERATOR
   MULTIPICATION_OPERATOR
   DIVISION_OPERATOR
   DIRECTION_FNC
   FILL_STATE_FNC


Rules useless in parser due to conflicts

   52 function_callers: IDENTIFIER LOCATION_FNC Y_VALUE_FNC ASSIGMENT_OPERATOR INTEGER


State 8 conflicts: 22 shift/reduce
State 14 conflicts: 1 reduce/reduce
State 15 conflicts: 1 reduce/reduce
State 16 conflicts: 1 reduce/reduce
State 17 conflicts: 1 reduce/reduce
State 18 conflicts: 1 reduce/reduce
State 27 conflicts: 23 shift/reduce
State 40 conflicts: 1 shift/reduce
State 69 conflicts: 22 shift/reduce
State 78 conflicts: 8 shift/reduce
State 128 conflicts: 30 reduce/reduce


Grammar

    0 $accept: program $end

    1 program: BEGIN_OF_MAIN stmt_list END_OF_MAIN

    2 stmt_list: stmt
    3          | stmt stmt_list

    4 stmt: def_stmt
    5     | assign_stmt
    6     | logic_stmt
    7     | comment_stmt

    8 def_stmt: data_type identifier

    9 data_type: INTEGER
   10          | FLOAT
   11          | WIDTH
   12          | HEIGHT
   13          | STROKE_WIDTH
   14          | DEF_WIDTH
   15          | DEF_HEIGHT
   16          | RECTANGLE
   17          | LINE
   18          | OVAL
   19          | COMPOSITE_SHAPE
   20          | SHAPE
   21          | PARAMETER
   22          | LOCATION
   23          | COLOR
   24          | SET
   25          | DIRECTION
   26          | BOOLEAN

   27 identifier: IDENTIFIER
   28           | IDENTIFIER assign_stmt
   29           | IDENTIFIER function_callers

   30 assign_stmt: ASSIGMENT_OPERATOR data_type LEFT_PARENTHESIS RIGHT_PARENTHESIS
   31            | ASSIGMENT_OPERATOR data_type LEFT_PARENTHESIS IDENTIFIER COMMA IDENTIFIER COMMA IDENTIFIER COMMA IDENTIFIER RIGHT_PARENTHESIS
   32            | ASSIGMENT_OPERATOR data_type LEFT_PARENTHESIS INTEGER COMMA INTEGER RIGHT_PARENTHESIS
   33            | ASSIGMENT_OPERATOR data_type LEFT_PARENTHESIS IDENTIFIER COMMA IDENTIFIER COMMA IDENTIFIER RIGHT_PARENTHESIS
   34            | ASSIGMENT_OPERATOR data_type LEFT_PARENTHESIS IDENTIFIER COMMA IDENTIFIER COMMA IDENTIFIER COMMA BOOLEAN COMMA INTEGER RIGHT_PARENTHESIS
   35            | ASSIGMENT_OPERATOR data_type LEFT_CURLYBRACKET INTEGER COMMA INTEGER COMMA INTEGER COMMA INTEGER RIGHT_CURLYBRACKET
   36            | ASSIGMENT_OPERATOR data_type LEFT_CURLYBRACKET IDENTIFIER COMMA IDENTIFIER COMMA IDENTIFIER COMMA IDENTIFIER RIGHT_CURLYBRACKET
   37            | ASSIGMENT_OPERATOR data_type LEFT_PARENTHESIS INTEGER COMMA INTEGER COMMA INTEGER COMMA FLOAT RIGHT_PARENTHESIS
   38            | ASSIGMENT_OPERATOR data_type LEFT_PARENTHESIS IDENTIFIER RIGHT_PARENTHESIS
   39            | ASSIGMENT_OPERATOR LEFT_PARENTHESIS INTEGER COMMA INTEGER RIGHT_PARENTHESIS
   40            | error_no1
   41            | error_no2
   42            | error_no3
   43            | error_no4
   44            | error_no5

   45 error_no1: data_type LEFT_PARENTHESIS RIGHT_PARENTHESIS

   46 error_no2: ASSIGMENT_OPERATOR LEFT_PARENTHESIS IDENTIFIER COMMA IDENTIFIER COMMA COMMA IDENTIFIER RIGHT_PARENTHESIS

   47 error_no3: ASSIGMENT_OPERATOR data_type LEFT_PARENTHESIS INTEGER RIGHT_PARENTHESIS

   48 error_no4: ASSIGMENT_OPERATOR data_type LEFT_PARENTHESIS IDENTIFIER COMMA IDENTIFIER RIGHT_PARENTHESIS

   49 error_no5: ASSIGMENT_OPERATOR data_type LEFT_CURLYBRACKET INTEGER COMMA INTEGER COMMA FLOAT COMMA INTEGER RIGHT_CURLYBRACKET

   50 function_callers: IDENTIFIER LOCATION_FNC X_VALUE_FNC ASSIGMENT_OPERATOR INTEGER
   51                 | IDENTIFIER LOCATION_FNC Y_VALUE_FNC ASSIGMENT_OPERATOR INTEGER
   52                 | IDENTIFIER LOCATION_FNC Y_VALUE_FNC ASSIGMENT_OPERATOR INTEGER
   53                 | IDENTIFIER HEIGHT_FNC ASSIGMENT_OPERATOR INTEGER
   54                 | IDENTIFIER WIDTH_FNC ASSIGMENT_OPERATOR INTEGER
   55                 | IDENTIFIER STROKE_WIDTH_FNC ASSIGMENT_OPERATOR INTEGER
   56                 | IDENTIFIER ROUNDED_FNC ASSIGMENT_OPERATOR BOOLEAN
   57                 | IDENTIFIER FILL_COLOR_FNC LEFT_PARENTHESIS IDENTIFIER RIGHT_PARENTHESIS
   58                 | DRAW_FNC IDENTIFIER
   59                 | DRAW_DEFAULT_FNC IDENTIFIER
   60                 | IDENTIFIER COLOR_FNC ASSIGMENT_OPERATOR IDENTIFIER LEFT_PARENTHESIS INTEGER COMMA INTEGER COMMA INTEGER COMMA INTEGER RIGHT_PARENTHESIS
   61                 | IDENTIFIER SIZE_FNC ASSIGMENT_OPERATOR LEFT_PARENTHESIS INTEGER COMMA INTEGER RIGHT_PARENTHESIS
   62                 | IDENTIFIER ARROW_FNC ASSIGMENT_OPERATOR BOOLEAN
   63                 | IDENTIFIER ARROW_SIZE_FNC ASSIGMENT_OPERATOR INTEGER

   64 logic_stmt: expr
   65           | expr logical_op
   66           | expr logical_op expr

   67 comment_stmt: COMMENT stmt_list

   68 expr: identifier
   69     | function_callers
   70     | SHAPE
   71     | COMPOSITE_SHAPE
   72     | RECTANGLE
   73     | OVAL
   74     | LINE

   75 logical_op: EQUALS_TO_INDICATOR
   76           | NOT_EQUALS_TO_INDICATOR
   77           | LESS_THAN_OR_EQUAL_TO_INDICATOR
   78           | LESS_THAN_INDICATOR
   79           | GREATHER_THAN_OR_EQUAL_TO_INDICATOR
   80           | GREATHER_THAN_INDICATOR
   81           | ASSIGMENT_OPERATOR


Terminals, with rules where they appear

$end (0) 0
error (256)
LEFT_BRACET (258)
RIGTH_BRACET (259)
LEFT_PARENTHESIS (260) 30 31 32 33 34 37 38 39 45 46 47 48 57 60 61
RIGHT_PARENTHESIS (261) 30 31 32 33 34 37 38 39 45 46 47 48 57 60 61
COMMA (262) 31 32 33 34 35 36 37 39 46 48 49 60 61
COMMENT (263) 67
LEFT_CURLYBRACKET (264) 35 36 49
RIGHT_CURLYBRACKET (265) 35 36 49
ASSIGMENT_OPERATOR (266) 30 31 32 33 34 35 36 37 38 39 46 47 48 49
    50 51 52 53 54 55 56 60 61 62 63 81
SUMMATION_OPERATOR (267)
SUBSTRACTION_OPERATOR (268)
MULTIPICATION_OPERATOR (269)
DIVISION_OPERATOR (270)
EQUALS_TO_INDICATOR (271) 75
NOT_EQUALS_TO_INDICATOR (272) 76
LESS_THAN_OR_EQUAL_TO_INDICATOR (273) 77
GREATHER_THAN_OR_EQUAL_TO_INDICATOR (274) 79
LESS_THAN_INDICATOR (275) 78
GREATHER_THAN_INDICATOR (276) 80
INTEGER (277) 9 32 34 35 37 39 47 49 50 51 52 53 54 55 60 61 63
FLOAT (278) 10 37 49
BOOLEAN (279) 26 34 56 62
IDENTIFIER (280) 27 28 29 31 33 34 36 38 46 48 50 51 52 53 54 55 56
    57 58 59 60 61 62 63
WIDTH (281) 11
HEIGHT (282) 12
STROKE_WIDTH (283) 13
DEF_WIDTH (284) 14
DEF_HEIGHT (285) 15
RECTANGLE (286) 16 72
LINE (287) 17 74
OVAL (288) 18 73
COMPOSITE_SHAPE (289) 19 71
SHAPE (290) 20 70
PARAMETER (291) 21
LOCATION (292) 22
COLOR (293) 23
SET (294) 24
DIRECTION (295) 25
BEGIN_OF_MAIN (296) 1
END_OF_MAIN (297) 1
LOCATION_FNC (298) 50 51 52
SIZE_FNC (299) 61
COLOR_FNC (300) 60
STROKE_WIDTH_FNC (301) 55
WIDTH_FNC (302) 54
X_VALUE_FNC (303) 50
Y_VALUE_FNC (304) 51 52
HEIGHT_FNC (305) 53
DIRECTION_FNC (306)
ROUNDED_FNC (307) 56
ARROW_FNC (308) 62
ARROW_SIZE_FNC (309) 63
DRAW_FNC (310) 58
DRAW_DEFAULT_FNC (311) 59
FILL_COLOR_FNC (312) 57
FILL_STATE_FNC (313)


Nonterminals, with rules where they appear

$accept (59)
    on left: 0
program (60)
    on left: 1, on right: 0
stmt_list (61)
    on left: 2 3, on right: 1 3 67
stmt (62)
    on left: 4 5 6 7, on right: 2 3
def_stmt (63)
    on left: 8, on right: 4
data_type (64)
    on left: 9 10 11 12 13 14 15 16 17 18 19 20 21 22 23 24 25 26,
    on right: 8 30 31 32 33 34 35 36 37 38 45 47 48 49
identifier (65)
    on left: 27 28 29, on right: 8 68
assign_stmt (66)
    on left: 30 31 32 33 34 35 36 37 38 39 40 41 42 43 44, on right:
    5 28
error_no1 (67)
    on left: 45, on right: 40
error_no2 (68)
    on left: 46, on right: 41
error_no3 (69)
    on left: 47, on right: 42
error_no4 (70)
    on left: 48, on right: 43
error_no5 (71)
    on left: 49, on right: 44
function_callers (72)
    on left: 50 51 52 53 54 55 56 57 58 59 60 61 62 63, on right: 29
    69
logic_stmt (73)
    on left: 64 65 66, on right: 6
comment_stmt (74)
    on left: 67, on right: 7
expr (75)
    on left: 68 69 70 71 72 73 74, on right: 64 65 66
logical_op (76)
    on left: 75 76 77 78 79 80 81, on right: 65 66


State 0

    0 $accept: . program $end

    BEGIN_OF_MAIN  shift, and go to state 1

    program  go to state 2


State 1

    1 program: BEGIN_OF_MAIN . stmt_list END_OF_MAIN

    COMMENT             shift, and go to state 3
    ASSIGMENT_OPERATOR  shift, and go to state 4
    INTEGER             shift, and go to state 5
    FLOAT               shift, and go to state 6
    BOOLEAN             shift, and go to state 7
    IDENTIFIER          shift, and go to state 8
    WIDTH               shift, and go to state 9
    HEIGHT              shift, and go to state 10
    STROKE_WIDTH        shift, and go to state 11
    DEF_WIDTH           shift, and go to state 12
    DEF_HEIGHT          shift, and go to state 13
    RECTANGLE           shift, and go to state 14
    LINE                shift, and go to state 15
    OVAL                shift, and go to state 16
    COMPOSITE_SHAPE     shift, and go to state 17
    SHAPE               shift, and go to state 18
    PARAMETER           shift, and go to state 19
    LOCATION            shift, and go to state 20
    COLOR               shift, and go to state 21
    SET                 shift, and go to state 22
    DIRECTION           shift, and go to state 23
    DRAW_FNC            shift, and go to state 24
    DRAW_DEFAULT_FNC    shift, and go to state 25

    stmt_list         go to state 26
    stmt              go to state 27
    def_stmt          go to state 28
    data_type         go to state 29
    identifier        go to state 30
    assign_stmt       go to state 31
    error_no1         go to state 32
    error_no2         go to state 33
    error_no3         go to state 34
    error_no4         go to state 35
    error_no5         go to state 36
    function_callers  go to state 37
    logic_stmt        go to state 38
    comment_stmt      go to state 39
    expr              go to state 40


State 2

    0 $accept: program . $end

    $end  shift, and go to state 41


State 3

   67 comment_stmt: COMMENT . stmt_list

    COMMENT             shift, and go to state 3
    ASSIGMENT_OPERATOR  shift, and go to state 4
    INTEGER             shift, and go to state 5
    FLOAT               shift, and go to state 6
    BOOLEAN             shift, and go to state 7
    IDENTIFIER          shift, and go to state 8
    WIDTH               shift, and go to state 9
    HEIGHT              shift, and go to state 10
    STROKE_WIDTH        shift, and go to state 11
    DEF_WIDTH           shift, and go to state 12
    DEF_HEIGHT          shift, and go to state 13
    RECTANGLE           shift, and go to state 14
    LINE                shift, and go to state 15
    OVAL                shift, and go to state 16
    COMPOSITE_SHAPE     shift, and go to state 17
    SHAPE               shift, and go to state 18
    PARAMETER           shift, and go to state 19
    LOCATION            shift, and go to state 20
    COLOR               shift, and go to state 21
    SET                 shift, and go to state 22
    DIRECTION           shift, and go to state 23
    DRAW_FNC            shift, and go to state 24
    DRAW_DEFAULT_FNC    shift, and go to state 25

    stmt_list         go to state 42
    stmt              go to state 27
    def_stmt          go to state 28
    data_type         go to state 29
    identifier        go to state 30
    assign_stmt       go to state 31
    error_no1         go to state 32
    error_no2         go to state 33
    error_no3         go to state 34
    error_no4         go to state 35
    error_no5         go to state 36
    function_callers  go to state 37
    logic_stmt        go to state 38
    comment_stmt      go to state 39
    expr              go to state 40


State 4

   30 assign_stmt: ASSIGMENT_OPERATOR . data_type LEFT_PARENTHESIS RIGHT_PARENTHESIS
   31            | ASSIGMENT_OPERATOR . data_type LEFT_PARENTHESIS IDENTIFIER COMMA IDENTIFIER COMMA IDENTIFIER COMMA IDENTIFIER RIGHT_PARENTHESIS
   32            | ASSIGMENT_OPERATOR . data_type LEFT_PARENTHESIS INTEGER COMMA INTEGER RIGHT_PARENTHESIS
   33            | ASSIGMENT_OPERATOR . data_type LEFT_PARENTHESIS IDENTIFIER COMMA IDENTIFIER COMMA IDENTIFIER RIGHT_PARENTHESIS
   34            | ASSIGMENT_OPERATOR . data_type LEFT_PARENTHESIS IDENTIFIER COMMA IDENTIFIER COMMA IDENTIFIER COMMA BOOLEAN COMMA INTEGER RIGHT_PARENTHESIS
   35            | ASSIGMENT_OPERATOR . data_type LEFT_CURLYBRACKET INTEGER COMMA INTEGER COMMA INTEGER COMMA INTEGER RIGHT_CURLYBRACKET
   36            | ASSIGMENT_OPERATOR . data_type LEFT_CURLYBRACKET IDENTIFIER COMMA IDENTIFIER COMMA IDENTIFIER COMMA IDENTIFIER RIGHT_CURLYBRACKET
   37            | ASSIGMENT_OPERATOR . data_type LEFT_PARENTHESIS INTEGER COMMA INTEGER COMMA INTEGER COMMA FLOAT RIGHT_PARENTHESIS
   38            | ASSIGMENT_OPERATOR . data_type LEFT_PARENTHESIS IDENTIFIER RIGHT_PARENTHESIS
   39            | ASSIGMENT_OPERATOR . LEFT_PARENTHESIS INTEGER COMMA INTEGER RIGHT_PARENTHESIS
   46 error_no2: ASSIGMENT_OPERATOR . LEFT_PARENTHESIS IDENTIFIER COMMA IDENTIFIER COMMA COMMA IDENTIFIER RIGHT_PARENTHESIS
   47 error_no3: ASSIGMENT_OPERATOR . data_type LEFT_PARENTHESIS INTEGER RIGHT_PARENTHESIS
   48 error_no4: ASSIGMENT_OPERATOR . data_type LEFT_PARENTHESIS IDENTIFIER COMMA IDENTIFIER RIGHT_PARENTHESIS
   49 error_no5: ASSIGMENT_OPERATOR . data_type LEFT_CURLYBRACKET INTEGER COMMA INTEGER COMMA FLOAT COMMA INTEGER RIGHT_CURLYBRACKET

    LEFT_PARENTHESIS  shift, and go to state 43
    INTEGER           shift, and go to state 5
    FLOAT             shift, and go to state 6
    BOOLEAN           shift, and go to state 7
    WIDTH             shift, and go to state 9
    HEIGHT            shift, and go to state 10
    STROKE_WIDTH      shift, and go to state 11
    DEF_WIDTH         shift, and go to state 12
    DEF_HEIGHT        shift, and go to state 13
    RECTANGLE         shift, and go to state 44
    LINE              shift, and go to state 45
    OVAL              shift, and go to state 46
    COMPOSITE_SHAPE   shift, and go to state 47
    SHAPE             shift, and go to state 48
    PARAMETER         shift, and go to state 19
    LOCATION          shift, and go to state 20
    COLOR             shift, and go to state 21
    SET               shift, and go to state 22
    DIRECTION         shift, and go to state 23

    data_type  go to state 49


State 5

    9 data_type: INTEGER .

    $default  reduce using rule 9 (data_type)


State 6

   10 data_type: FLOAT .

    $default  reduce using rule 10 (data_type)


State 7

   26 data_type: BOOLEAN .

    $default  reduce using rule 26 (data_type)


State 8

   27 identifier: IDENTIFIER .
   28           | IDENTIFIER . assign_stmt
   29           | IDENTIFIER . function_callers
   50 function_callers: IDENTIFIER . LOCATION_FNC X_VALUE_FNC ASSIGMENT_OPERATOR INTEGER
   51                 | IDENTIFIER . LOCATION_FNC Y_VALUE_FNC ASSIGMENT_OPERATOR INTEGER
   52                 | IDENTIFIER . LOCATION_FNC Y_VALUE_FNC ASSIGMENT_OPERATOR INTEGER
   53                 | IDENTIFIER . HEIGHT_FNC ASSIGMENT_OPERATOR INTEGER
   54                 | IDENTIFIER . WIDTH_FNC ASSIGMENT_OPERATOR INTEGER
   55                 | IDENTIFIER . STROKE_WIDTH_FNC ASSIGMENT_OPERATOR INTEGER
   56                 | IDENTIFIER . ROUNDED_FNC ASSIGMENT_OPERATOR BOOLEAN
   57                 | IDENTIFIER . FILL_COLOR_FNC LEFT_PARENTHESIS IDENTIFIER RIGHT_PARENTHESIS
   60                 | IDENTIFIER . COLOR_FNC ASSIGMENT_OPERATOR IDENTIFIER LEFT_PARENTHESIS INTEGER COMMA INTEGER COMMA INTEGER COMMA INTEGER RIGHT_PARENTHESIS
   61                 | IDENTIFIER . SIZE_FNC ASSIGMENT_OPERATOR LEFT_PARENTHESIS INTEGER COMMA INTEGER RIGHT_PARENTHESIS
   62                 | IDENTIFIER . ARROW_FNC ASSIGMENT_OPERATOR BOOLEAN
   63                 | IDENTIFIER . ARROW_SIZE_FNC ASSIGMENT_OPERATOR INTEGER

    ASSIGMENT_OPERATOR  shift, and go to state 4
    INTEGER             shift, and go to state 5
    FLOAT               shift, and go to state 6
    BOOLEAN             shift, and go to state 7
    IDENTIFIER          shift, and go to state 50
    WIDTH               shift, and go to state 9
    HEIGHT              shift, and go to state 10
    STROKE_WIDTH        shift, and go to state 11
    DEF_WIDTH           shift, and go to state 12
    DEF_HEIGHT          shift, and go to state 13
    RECTANGLE           shift, and go to state 44
    LINE                shift, and go to state 45
    OVAL                shift, and go to state 46
    COMPOSITE_SHAPE     shift, and go to state 47
    SHAPE               shift, and go to state 48
    PARAMETER           shift, and go to state 19
    LOCATION            shift, and go to state 20
    COLOR               shift, and go to state 21
    SET                 shift, and go to state 22
    DIRECTION           shift, and go to state 23
    LOCATION_FNC        shift, and go to state 51
    SIZE_FNC            shift, and go to state 52
    COLOR_FNC           shift, and go to state 53
    STROKE_WIDTH_FNC    shift, and go to state 54
    WIDTH_FNC           shift, and go to state 55
    HEIGHT_FNC          shift, and go to state 56
    ROUNDED_FNC         shift, and go to state 57
    ARROW_FNC           shift, and go to state 58
    ARROW_SIZE_FNC      shift, and go to state 59
    DRAW_FNC            shift, and go to state 24
    DRAW_DEFAULT_FNC    shift, and go to state 25
    FILL_COLOR_FNC      shift, and go to state 60

    ASSIGMENT_OPERATOR  [reduce using rule 27 (identifier)]
    INTEGER             [reduce using rule 27 (identifier)]
    FLOAT               [reduce using rule 27 (identifier)]
    BOOLEAN             [reduce using rule 27 (identifier)]
    IDENTIFIER          [reduce using rule 27 (identifier)]
    WIDTH               [reduce using rule 27 (identifier)]
    HEIGHT              [reduce using rule 27 (identifier)]
    STROKE_WIDTH        [reduce using rule 27 (identifier)]
    DEF_WIDTH           [reduce using rule 27 (identifier)]
    DEF_HEIGHT          [reduce using rule 27 (identifier)]
    RECTANGLE           [reduce using rule 27 (identifier)]
    LINE                [reduce using rule 27 (identifier)]
    OVAL                [reduce using rule 27 (identifier)]
    COMPOSITE_SHAPE     [reduce using rule 27 (identifier)]
    SHAPE               [reduce using rule 27 (identifier)]
    PARAMETER           [reduce using rule 27 (identifier)]
    LOCATION            [reduce using rule 27 (identifier)]
    COLOR               [reduce using rule 27 (identifier)]
    SET                 [reduce using rule 27 (identifier)]
    DIRECTION           [reduce using rule 27 (identifier)]
    DRAW_FNC            [reduce using rule 27 (identifier)]
    DRAW_DEFAULT_FNC    [reduce using rule 27 (identifier)]
    $default            reduce using rule 27 (identifier)

    data_type         go to state 61
    assign_stmt       go to state 62
    error_no1         go to state 32
    error_no2         go to state 33
    error_no3         go to state 34
    error_no4         go to state 35
    error_no5         go to state 36
    function_callers  go to state 63


State 9

   11 data_type: WIDTH .

    $default  reduce using rule 11 (data_type)


State 10

   12 data_type: HEIGHT .

    $default  reduce using rule 12 (data_type)


State 11

   13 data_type: STROKE_WIDTH .

    $default  reduce using rule 13 (data_type)


State 12

   14 data_type: DEF_WIDTH .

    $default  reduce using rule 14 (data_type)


State 13

   15 data_type: DEF_HEIGHT .

    $default  reduce using rule 15 (data_type)


State 14

   16 data_type: RECTANGLE .
   72 expr: RECTANGLE .

    LEFT_PARENTHESIS  reduce using rule 16 (data_type)
    IDENTIFIER        reduce using rule 16 (data_type)
    IDENTIFIER        [reduce using rule 72 (expr)]
    $default          reduce using rule 72 (expr)


State 15

   17 data_type: LINE .
   74 expr: LINE .

    LEFT_PARENTHESIS  reduce using rule 17 (data_type)
    IDENTIFIER        reduce using rule 17 (data_type)
    IDENTIFIER        [reduce using rule 74 (expr)]
    $default          reduce using rule 74 (expr)


State 16

   18 data_type: OVAL .
   73 expr: OVAL .

    LEFT_PARENTHESIS  reduce using rule 18 (data_type)
    IDENTIFIER        reduce using rule 18 (data_type)
    IDENTIFIER        [reduce using rule 73 (expr)]
    $default          reduce using rule 73 (expr)


State 17

   19 data_type: COMPOSITE_SHAPE .
   71 expr: COMPOSITE_SHAPE .

    LEFT_PARENTHESIS  reduce using rule 19 (data_type)
    IDENTIFIER        reduce using rule 19 (data_type)
    IDENTIFIER        [reduce using rule 71 (expr)]
    $default          reduce using rule 71 (expr)


State 18

   20 data_type: SHAPE .
   70 expr: SHAPE .

    LEFT_PARENTHESIS  reduce using rule 20 (data_type)
    IDENTIFIER        reduce using rule 20 (data_type)
    IDENTIFIER        [reduce using rule 70 (expr)]
    $default          reduce using rule 70 (expr)


State 19

   21 data_type: PARAMETER .

    $default  reduce using rule 21 (data_type)


State 20

   22 data_type: LOCATION .

    $default  reduce using rule 22 (data_type)


State 21

   23 data_type: COLOR .

    $default  reduce using rule 23 (data_type)


State 22

   24 data_type: SET .

    $default  reduce using rule 24 (data_type)


State 23

   25 data_type: DIRECTION .

    $default  reduce using rule 25 (data_type)


State 24

   58 function_callers: DRAW_FNC . IDENTIFIER

    IDENTIFIER  shift, and go to state 64


State 25

   59 function_callers: DRAW_DEFAULT_FNC . IDENTIFIER

    IDENTIFIER  shift, and go to state 65


State 26

    1 program: BEGIN_OF_MAIN stmt_list . END_OF_MAIN

    END_OF_MAIN  shift, and go to state 66


State 27
